# flutter-app-template

./: .gitignore  Cargo.toml  README.md  pubspec.yaml
.github/workflows/: ci.yml  main.yml  release.yml
lib/: main.dart
src/: main.rs
test/: main_test.dart
test_driver/: app.dart  app_test.dart
