[package]
name = "flutter-app-template"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
env_logger = "0.7.1"
flutter-engine = { path = "../flutter-rs/flutter-engine", features = ["loader"] }
flutter-winit = { path = "../flutter-rs/flutter-winit" }
glutin = { git = "https://github.com/dvc94ch/glutin", branch = "android" }
log = "0.4.8"

[package.metadata.flutter]
engine_version = "4ef65fae04b903b1533e10a835e90b5ae3c463a4"
